<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EjercicioA_Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_titulo_suma"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_valor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextHint_valor1"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText_valor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextHint_valor2"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sumar" />

    <TextView
        android:id="@+id/textView_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_resultado" />
</LinearLayout>